#PK-1146 UI Authorization

--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowReconciliationStatements/CashFlowReconciliationStatement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowReconciliationStatements/CashFlowReconciliationStatement.razor
@@ -19,7 +19,7 @@
 @inject IElectronicInvoiceAppService _electronicInvoiceAppService;
 @inject IItemAppService _ItemAppService;
 @inject IJSRuntime JSRuntime;
-
+@attribute [Authorize]
 <div class="row">
     <div class="col-6">
         <h3>@L["CashFlowReconciliation"]</h3>
