--- a/src/Kooco.Pikachu.Blazor/Pages/DeliveryTemperatureCosts/DeliveryTemperatureCost.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DeliveryTemperatureCosts/DeliveryTemperatureCost.razor
@@ -16,7 +16,7 @@
 
 @inject IStringLocalizer<PikachuResource> L
 @inject NavigationManager NavigationManager
-
+@attribute [Authorize]
 @* <h3>@L["DeliveryTemperatureCost"]</h3> *@
 
 <style>
