--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -19,7 +19,7 @@
 @inject NavigationManager NavigationManager
 @inject IConfiguration _Configuration
 @inject IJSRuntime _JSRuntime
-
+@attribute [Authorize]
 
      @if(loading)
     {
