--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReport.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReport.razor
@@ -17,6 +17,7 @@
 @inject IStringLocalizer<PikachuResource> L
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JSRuntime;
+@attribute [Authorize]
 
 <LoadingIndicator @ref="Loading" FullScreen FadeIn>
 </LoadingIndicator>
