--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -19,6 +19,7 @@
 @inject IProductCategoryAppService ProductCategoryAppService
 @using Microsoft.JSInterop;
 @inject IJSRuntime JS;
+@attribute [Authorize]
 
 <style>
     .row {
