--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -18,6 +18,8 @@
 @inject IProductCategoryAppService ProductCategoryAppService
 @using Microsoft.JSInterop;
 @inject IJSRuntime JS;
+@attribute [Authorize]
+
 <style>
     .row {
         margin-top: 10px;
