--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/InventoryReport.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/InventoryReport.razor
@@ -13,6 +13,7 @@
 @inject IStringLocalizer<PikachuResource> L
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JSRuntime
+@attribute [Authorize]
 
 <div class="row">
     <div class="col-6">
