--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -14,6 +14,7 @@
 @inject IStringLocalizer<PikachuResource> L
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JSRuntime;
+@attribute [Authorize]
 
 <LoadingIndicator @ref="Loading" FullScreen></LoadingIndicator>
 <div class="row">
