--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderShippingDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderShippingDetails.razor
@@ -16,6 +16,7 @@
 @inject IOrderAppService _orderAppService;
 @inject ICurrentUser CurrentUser;
 @inject IJSRuntime JSRuntime
+@attribute [Authorize]
 
 <style>
     .tbl thead th {
