--- a/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
@@ -18,6 +18,7 @@
 @inject IUiMessageService _uiMessageService;
 @inject IJSRuntime JSRunTime;
 @inject ILinePayAppService LinePayAppService
+@attribute [Authorize]
 
 <LoadingIndicator @ref="loading" FullScreen FadeIn>
 
