--- a/src/Kooco.Pikachu.Blazor/Pages/ReturnAndExchangeOrders/ReturnAndExchangeOrder.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ReturnAndExchangeOrders/ReturnAndExchangeOrder.razor
@@ -15,7 +15,7 @@
 @inject NavigationManager NavigationManager;
 @inject IUiMessageService _uiMessageService;
 @inject IOrderAppService _orderAppService;
-
+@attribute [Authorize]
 
      @if(loading)
     {
