--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -10,7 +10,7 @@
 @inherits PikachuComponentBase
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JSRuntime
-
+@attribute [Authorize]
 <h3>@L["SetItem"]</h3>
 
 <Card>
