--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/EditSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/EditSetItem.razor
@@ -11,7 +11,7 @@
 @inject NavigationManager NavigationManager
 @inject IItemAppService ItemAppService
 @inject IJSRuntime JSRuntime
-
+@attribute [Authorize]
 <h3>@L["EditSetItem"]</h3>
 
 <Card>
