--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/CreateAutomaticEmails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/CreateAutomaticEmails.razor
@@ -17,7 +17,7 @@
 @inject IJSRuntime JSRuntime;
 @inject NavigationManager NavigationManager;
 @inject IStringLocalizer<PikachuResource> L;
-
+@attribute [Authorize]
 <style>
     .tag-input {
         width: 250px !important;
