--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/EditAutomaticEmails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/EditAutomaticEmails.razor
@@ -18,7 +18,7 @@
 @inject NavigationManager NavigationManager;
 @inject IObjectMapper ObjectMapper;
 @inject IStringLocalizer<PikachuResource> L;
-
+@attribute [Authorize]
     <style>
         .tag-input{
             width: 250px !important;
