--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
@@ -11,7 +11,7 @@
 @inject IJSRuntime JSRuntime;
 @inject IObjectMapper ObjectMapper;
 @inject IStringLocalizer<PikachuResource> L;
-
+@attribute [Authorize]
 <LoadingIndicator @ref="Loading" FullScreen>
 
 </LoadingIndicator>
