--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
@@ -13,7 +13,7 @@
 @inherits PikachuComponentBase
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JSRuntime
-
+@attribute [Authorize]
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
