--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/FreebieList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/FreebieList.razor
@@ -11,7 +11,7 @@
 
 @inject IStringLocalizer<PikachuResource> L
 @inject NavigationManager NavigationManager
-
+@attribute [Authorize]
 <div class="row">
     <div class="col-6">
         <h3>@L["FreebiesList"]</h3>
