--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -26,6 +26,7 @@
 @inject IConfiguration _configuration
 @inject IJSRuntime JSRuntime;
 @inject IOrderAppService _OrderAppService;
+@attribute [Authorize]
 
 <style>
     .row {
