--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/AutomaticEmailing.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/AutomaticEmailing.razor
@@ -10,7 +10,7 @@
 @inject IJSRuntime JSRuntime;
 @inject NavigationManager NavigationManager;
 @inject IStringLocalizer<PikachuResource> L;
-
+@attribute [Authorize]
 <Div Class="row">
     <Div Class="col-md-6 col-sm-12">
         <h3>@L["AutomaticEmailing"]</h3>
