--- a/src/Kooco.Pikachu.Blazor/Pages/Index.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Index.razor
@@ -2,7 +2,7 @@
 @using Volo.Abp.MultiTenancy
 @inherits PikachuComponentBase
 @inject AuthenticationStateProvider AuthenticationStateProvider
-
+@attribute [Authorize]
 <div class="container">
     <div class="p-5 text-center">
         <Badge Color="Color.Success" class="mb-4">
