--- a/src/Kooco.Pikachu.Blazor/wwwroot/global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/global-styles.css
@@ -19,6 +19,7 @@ body {
     font-size: 12px;
     font-weight: bold;
     padding: 2px 6px;
+    margin-left:3px;
     border-radius: 50%;
    
     top: 5px;
@@ -26,4 +27,5 @@ body {
     min-width: 10px;
     min-height:10px;
     text-align: center;
+    
 }
