--- a/src/Kooco.Pikachu.Blazor/Pages/LogisticsManagement/LogisticsProviderSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/LogisticsManagement/LogisticsProviderSettings.razor
@@ -283,7 +283,7 @@
                                     <TabPanel Name="postoffice">
                                         <Card>
                                             <CardHeader>
-                                                <h4>@L["PostOffice_2"]</h4>
+                                                <h4>@L["PostOffice"]</h4>
                                             </CardHeader>
                                             <CardBody>
                                                 <EditForm Model="@PostOffice" OnValidSubmit="UpdatePostOfficeAsync">
@@ -835,7 +835,7 @@
                                     <TabPanel Name="7-11frozen">
                                         <Card>
                                             <CardHeader>
-                                                <h4>@L["7-11 Frozen"]</h4>
+                                                <h4>@L["7-11 frozen"]</h4>
                                             </CardHeader>
                                             <CardBody>
                                                 <EditForm Model="@SevenToElevenFrozen" OnValidSubmit="UpdateSevenToElevenFrozenAsync">
@@ -985,7 +985,7 @@
                                     <TabPanel Name="familymartC2C">
                                         <Card>
                                             <CardHeader>
-                                                <h4>@L["FamilyMartC2C_2"]</h4>
+                                                <h4>@L["FamilyMartC2C"]</h4>
                                             </CardHeader>
                                             <CardBody>
                                                 <EditForm Model="@FamilyMartC2C" OnValidSubmit="UpdateFamilyMartC2CAsync">
