#PK-1163 Remove unused data from GetReportListAsync

--- a/src/Kooco.Pikachu.Blazor/Layouts/EmptyLayout.razor
+++ b/src/Kooco.Pikachu.Blazor/Layouts/EmptyLayout.razor
@@ -9,6 +9,11 @@
 
 @inject IBrandingProvider BrandingProvider
 
+<style>
+	.lpx-content {
+		background: rgb(238, 238, 238);
+	}
+</style>
 <div class="lpx-scroll-container ps">
 	<div id="lpx-wrapper">
 		
