Commit For Pk-1159

--- a/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
@@ -20,8 +20,36 @@
 @inject ILinePayAppService LinePayAppService
 @attribute [Authorize]
 
-<LoadingIndicator @ref="loading" FullScreen FadeIn>
+@if (loading)
+{
+    <Skeleton Animation="SkeletonAnimation.Pulse">
+        <div class="row">
+            <!-- Left column for the OrdersList heading -->
+            <div class="col-3">
+                <!-- This skeleton item is ~7/12 wide, you can adjust ColumnSize -->
+                <SkeletonItem ColumnSize="ColumnSize.Is12" Class="mb-2" />
+            </div>
 
+            <!-- Right column for multiple button placeholders -->
+            <div class="col-9 text-lg-end d-flex gap-2 justify-content-end">
+                <!-- Make each skeleton item narrower or wider to mimic small buttons -->
+                <SkeletonItem ColumnSize="ColumnSize.Is12" />
+
+                <!-- Add more SkeletonItem lines if needed -->
+            </div>
+        </div>
+    </Skeleton>
+    <Card>
+        <CardBody>
+                     <Skeleton Animation="SkeletonAnimation.Pulse">
+        <!-- For example, 5 horizontal bars to represent the table rows -->
+      <SkeletonTable Rows="10" Columns="13" />
+    </Skeleton>
+                </CardBody>
+            </Card>
+            }
+
+<div style="@($"display: {(loading ? "none" : "block")};" )">
     <div class="row">
         <div class="col-6">
             <h3>@L["RefundsList"]</h3>
@@ -213,6 +241,7 @@
             </DataGrid>
         </CardBody>
     </Card>
+    </div>
     <Modal @ref="@RejectReasonModal">
         <ModalContent IsCentered="true">
             <Form>
@@ -260,7 +289,7 @@
             </Form>
         </ModalContent>
     </Modal>
-</LoadingIndicator>
+
 @{
 
 }
