Commit For Pk-1151

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReport.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReport.razor
@@ -19,9 +19,35 @@
 @inject IJSRuntime JSRuntime;
 @attribute [Authorize]
 
-<LoadingIndicator @ref="Loading" FullScreen FadeIn>
-</LoadingIndicator>
+@if(Loading==true)
+{
+    <Skeleton Animation="SkeletonAnimation.Pulse">
+        <div class="row">
+            <!-- Left column for the OrdersList heading -->
+            <div class="col-3">
+                <!-- This skeleton item is ~7/12 wide, you can adjust ColumnSize -->
+                <SkeletonItem ColumnSize="ColumnSize.Is12" Class="mb-2" />
+            </div>
 
+            <!-- Right column for multiple button placeholders -->
+            <div class="col-9 text-lg-end d-flex gap-2 justify-content-end">
+                <!-- Make each skeleton item narrower or wider to mimic small buttons -->
+                
+
+                <!-- Add more SkeletonItem lines if needed -->
+            </div>
+        </div>
+    </Skeleton>
+    <Card>
+        <CardBody>
+            <Skeleton Animation="SkeletonAnimation.Pulse">
+                <!-- For example, 5 horizontal bars to represent the table rows -->
+                <SkeletonTable Rows="10" Columns="5" />
+            </Skeleton>
+        </CardBody>
+    </Card>
+}
+<div style="@($"display: {(Loading ? "none" : "block")};" )">
 <div class="row">
     <div class="col-6">
         <h3>@L["GroupbuyReport"]</h3>
@@ -77,6 +103,5 @@
         </DataGrid>
     </CardBody>
 </Card>
-@code {
+</div>
 
-}
